<resources>
    <string name="app_name">The DM\'s Grimoire</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="credits">The Bored Bards Present</string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="rustredwave">RustRedWave</string>
    <string name="darkblushwave">DarkBlushWave</string>
    <string name="blushpinkwave">blushPinkWave</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="need_account">Don\'t Have an Account?</string>
    <string name="roll">Roll</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="campaigns">Campaigns</string>
    <string name="roller">Roller</string>
    <string name="name_gen">Name Generator</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="num_dice"># of Dice</string>
    <string name="edit_stats">Edit Stats</string>
    <string name="combat">Begin Combat</string>
    <string name="poc_default">Campaign 1</string>
    <string name="default_plyr1_name">Player 1</string>
    <string name="default_pyr1_stats">Player 1 Stats</string>
    <string name="default_plyr2_name">Player 2</string>
    <string name="default_pyr2_stats">Player 2 Stats</string>
    <string name="enter_combat_rolls">Enter Combat Rolls</string>
    <string name="roll_initiative">Roll Initiative</string>
    <string name="strahd">Curse of Strahd</string>
    <string name="abyss">Out of the Abyss</string>
    <string name="tomb">Tomb of Annihilation</string>
    <string name="your_campaigns">Your Campaigns:</string>
    <string name="player_stats">Player Stats</string>
    <string name="maps">Maps</string>
    <string name="enemies_and_monsters">Enemies and Monsters</string>
    <string name="npc">NPC</string>
    <string name="curse_of_strahd">Curse of Strahd</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="offline_data">Offline Data</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="add_note">Add Note</string>
    <string name="setNumDice">Set # Dice</string>
    <string name="default_num_dice">1</string>
    <string name="title_activity_login_google">LoginGoogle</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Email" />
    <string name="disadv">Disadv.</string>
    <string name="adv">Adv.</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="new_campaign">New Campaign</string>
    <string name="override_me">Override Me</string>
    <string name="title_of_campaign">Title of Campaign</string>
    <string name="edit_characters">Edit Characters</string>
    <string name="players">Players</string>
    <string name="your_players">Your Players</string>
    <string name="add_new_character">Add new character</string>
    <string name="submit_new_character">submit New character</string>
    <string name="name">Name</string>
    <string name="race">Race (Orc, Human, Halfing…)</string>
    <string name="class_">Class (Fighter, Cleric, Barbarian…)</string>
    <string name="update_character">Update Character</string>
    <string name="add_new_campaign">Add new campaign</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="save_campaign">Save campaign</string>
    <string name="short_campaign_bio">Short Campaign Bio</string>
    <string name="type">Type (NPC or PC)</string>
    <string name="return_to_list_of_players">Return to List of Players</string>
    <string name="race_">Race</string>
    <string name="class__">Class</string>
    <string name="type_">Type</string>
    <string name="new_campaign">New Campaign</string>
    <string name="override_me">Override Me</string>
    <string name="title_of_campaign">Title of Campaign</string>
    <string name="edit_characters">Edit Characters</string>
    <string name="players">Players</string>
    <string name="your_players">Your Players</string>
    <string name="add_new_character">Add new character</string>
    <string name="submit_new_character">submit New character</string>
    <string name="name">Name</string>
    <string name="race">Race (Orc, Human, Halfing…)</string>
    <string name="class_">Class (Fighter, Cleric, Barbarian…)</string>
    <string name="update_character">Update Character</string>
    <string name="add_new_campaign">Add new campaign</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="save_campaign">Save campaign</string>
    <string name="short_campaign_bio">Short Campaign Bio</string>
    <string name="type">Type (NPC or PC)</string>
    <string name="return_to_list_of_players">Return to List of Players</string>
    <string name="race_">Race</string>
    <string name="class__">Class</string>
    <string name="type_">Type</string>
</resources>