<?xml version="1.0" encoding="utf-8"?>
<!-- @author Caroline Barrineau -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreyWhite"
    tools:context=".UI_files.campaign_activity">

    <!-- Nav Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_menu" />

    <!--This will be the left margin guide-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <!--This will be the right margin guide-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <!--Bottom Guideline, in prep for some sort of toolbar at the bottom-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp" />

    <!--Bottom Guideline, in prep for some sort of toolbar at the bottom-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <!-- DON'T MESS WITH CONSTRAINT BOTTOM TO TOP OF, adjust footer instead -->
    <!-- Background: BlushPinkWave-->
    <ImageView
        android:id="@+id/LightestWave"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/blushpinkwave"
        app:layout_constraintBottom_toTopOf="@id/guideline_footer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/wave3" />

    <!-- Background: BlushPinkWave-->
    <ImageView
        android:id="@+id/DarkBlushWave"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_marginBottom="2.5dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_footer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/wave2"
        android:contentDescription="@string/darkblushwave" />

    <!-- Background: RustRedWave-->

    <!-- "BoredBard Present" -->

    <ImageView
        android:id="@+id/RustRedWave"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/wave"
        android:contentDescription="@string/rustredwave" />

    <!-- "BoredBard Present" -->
    <TextView
        android:id="@+id/Credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:padding="16dp"
        android:text="@string/credits"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_header" />

    <!-- Name of App -->
    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/Credits" />

    <!-- Username of whoever is logged in -->
    <TextView
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/AppName" />

    <!-- Campaigns -->
    <LinearLayout
        android:id="@+id/campaigns"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/username">

        <TextView
            android:id="@+id/campaignHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/your_campaigns"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="inherit"/>

        <!-- Do not add the names of the campaigns to strings -->
        <Button
            android:id="@+id/campaign1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblushPink"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/strahd"
            android:textAlignment="center" />
        <!-- Do not add the names of the campaigns to strings -->
        <Button
            android:id="@+id/campaign2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblushPink"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/abyss"
            android:textAlignment="center" />
        <!-- Do not add the names of the campaigns to strings -->
        <Button
            android:id="@+id/campaign3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblushPink"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/tomb"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="448dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>