<?xml version="1.0" encoding="utf-8"?>
<!-- @author Caroline Barrineau -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreyWhite">

    <!--Bottom Guideline, in prep for some sort of toolbar at the bottom-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp" />

    <!-- DON'T MESS WITH CONSTRAINT BOTTOM_TO_TOP_OF, adjust footer instead -->
    <!-- Background: BlushPinkWave-->
    <ImageView
        android:id="@+id/LightestWave"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_footer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/wave3"
        android:contentDescription="@string/blushpinkwave" />

    <!-- Background: BlushPinkWave-->
    <ImageView
        android:id="@+id/DarkBlushWave"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_marginBottom="2.5dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_footer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/wave2"
        android:contentDescription="@string/darkblushwave" />

    <!-- Background: RustRedWave-->
    <ImageView
        android:id="@+id/RustRedWave"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/wave"
        android:contentDescription="@string/rustredwave" />

</androidx.constraintlayout.widget.ConstraintLayout>